# finegrain-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: finegrain-ci.yml  publish.yml
examples/chatgpt/: .env.example  .gitignore  README.md  instructions.md  openapi.yml  pyproject.toml
examples/chatgpt/src/chatgpt_bridge/: __init__.py  context.py  env.py  utils.py
examples/chatgpt/src/chatgpt_bridge/actions/: cutout.py  erase.py  recolor.py  shadow.py  undo.py
examples/chatgpt/src/chatgpt_bridge/skills/: box.py  cutout.py  erase.py  recolor.py  shadow.py  undo.py  upscale.py
examples/chatgpt/tests/: conftest.py  test_box.py  test_cutout.py  test_erase.py  test_recolor.py  test_shadow.py  test_upscale.py  utils.py
examples/comfyui/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
examples/comfyui/advanced/: blender.py  box.py  download_image.py  download_mask.py  eraser.py  recolor.py  segment.py  shadow.py  upload_image.py  upload_mask.py  upscale.py
examples/comfyui/assets/: blend.json  blender.json  cutout.json  erase.json  eraser.json  packshot.json  recolor.json  removebg.json  shadow.json  swap.json
examples/comfyui/skills/: blender.py  box.py  eraser.py  name.py  recolor.py  segment.py  shadow.py  upscale.py
examples/comfyui/utils/: bbox.py  context.py  image.py
examples/discord/: .env.example  .gitignore  README.md  pyproject.toml
examples/discord/src/finegrain_discord/: bot.py
examples/discord/typings/aiomonitor/: __init__.pyi
examples/figma/: .env.example  README.md  pyproject.toml
examples/figma/src/figma_bridge/: __init__.py  env.py  erase.py  utils.py
finegrain/: .gitignore  README.md  pyproject.toml
finegrain/examples/: erase.py  erase_sync.py
finegrain/src/finegrain/: __init__.py
finegrain/tests/: conftest.py  test_erase.py  test_move.py  test_recolor.py  test_segment.py  test_subscription_topic.py  test_switch_light.py  test_upscale.py
