[project]
name = "finegrain"
version = "0.1.0"
description = "Finegrain API client"
authors = [
    { name = "Pierre Chapuis", email = "pierre@lagon.tech" }
]
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
]
readme = "README.md"
requires-python = ">= 3.12, <3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/finegrain"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "UP",  # pyupgrade
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "I",   # isort
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
