[project]
name = "finegrain"
version = "0.2.0"
description = "Finegrain API client"
authors = [
    { name = "Pierre Chapuis", email = "pierre@lagon.tech" }
]
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyjwt[crypto]>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[dependency-groups]
# pytest-asyncio > 0.21 changes event loop management
dev = [
    "environs>=14.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0, <0.22.0",
    "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/finegrain"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "UP",  # pyupgrade
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "I",   # isort
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]
