[project]
authors = [
    { name = "Laurent Fainsin", email = "laurent@lagon.tech" },
]
dependencies = [
    "environs>=14.1.0",
    "finegrain @ git+https://github.com/finegrain-ai/finegrain-python.git#subdirectory=finegrain",
    "pydantic>=2.10.5",
    "quart>=0.20.0",
    "pillow>=11.1.0",
    "async-lru>=2.0.4",
]
description = "Finegrain API ChatGPT bridge"
name = "chatgpt-bridge"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.rye]
dev-dependencies = [
    "pyright>=1.1.392",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "typos>=1.29.4",
    "pytest-cov>=6.0.0",
]
managed = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatgpt_bridge"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "C901",  # is too complex
    "E731",  # do-not-assign-lambda
    "EM101", # exception must not use a string literal
    "EM102", # f-string literal in exception message
    "G004",  # f-string literal in logging message
    "N812",  # imported as non-lowercase
    "S101",  # use of assert
    "S311",  # non secure cryptographic random
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "EM",  # flake8-errmsg
    "F",   # Pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PTH", # flake8-use-pathlib
    "RUF", # ruff
    "S",   # flake8-bandit
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUntypedFunctionDecorator = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
