[project]
authors = [
    { name = "Laurent Fainsin", email = "laurent@lagon.tech" },
]
dependencies = [
    "finegrain @ git+https://github.com/finegrain-ai/finegrain-python@a03cff35d17d5351cb7179cfa71c2e2eb5e7b1ca#subdirectory=finegrain",
]
description = "Finegrain API ComfyUI custom nodes"
license = { text = "MIT License" }
name = "comfyui-finegrain"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.7"

[project.urls]
Repository = "https://github.com/finegrain-ai/finegrain-python/"

[tool.comfy]
DisplayName = "comfyui-finegrain"
PublisherId = "finegrain"

[tool.rye]
dev-dependencies = [
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "pyright>=1.1.392",
    "ruff>=0.9.2",
    "torch>=2.6.0",
    "typos>=1.29.4",
]
managed = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "C901",  # is too complex
    "E731",  # do-not-assign-lambda
    "EM101", # exception must not use a string literal
    "EM102", # f-string literal in exception message
    "G004",  # f-string literal in logging message
    "N812",  # imported as non-lowercase
    "S101",  # use of assert
    "S311",  # non secure cryptographic random
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "EM",  # flake8-errmsg
    "F",   # Pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PTH", # flake8-use-pathlib
    "RUF", # ruff
    "S",   # flake8-bandit
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUntypedFunctionDecorator = false
